# OpenMeteo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  all_towns_data.csv  austria_towns_data.csv  austria_towns_with_elevation.py  create_indexes.py  create_view.py  docker-compose.yml  fetch_german_cities.py  fetch_weather_from_openmeteo.py  generate_gallery.py  german_cities_50.csv  get_german_cities.py  get_town_names.py  import_to_db.py  italian_towns_data.csv  italian_towns_with_elevation.py  join_towns_weather.py  plot_towns.py  process_towns.py  pyproject.toml  scheduler.py  swiss_towns_data.csv  swiss_towns_with_elevation.py  towns.names  towns_gallery.html  towns_plot.html  upload-db.py
